--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,17 @@
   "version": "1.0",
   "manifest_version": 2,
   "description": "Get pages source from a popup",
+  "options_page": "options.html",
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "permissions": ["tabs", "<all_urls>"]
+  "permissions": ["tabs", "<all_urls>"],
+
+  "content_scripts":[
+    {
+      "matches": ["http://*/*"],
+      "js": ["popup.js"]
+    }
+  ]
 }
